<resources>
    <string name="app_name">Quiz</string>
    <string name="pytanie">Jakie schronisko jest widoczne na obrazku</string>
    <string name="odpa">Nad Morskim Okiem</string>
    <string name="odpb">Na Wielkiej Raczy</string>
    <string name="odpc">Na Rysiance</string>
    <string name="spr">Sprawdz</string>
    <string name="podpow">Podpowiedz</string>
    <string name="opis">Schronisko oddano do użytku 17 grudnia 1934. Inwestorem był bielski oddział Polskiego Towarzystwa Tatrzańskiego. W obiekcie mogło przenocować 40 osób. W połowie sierpnia 1939, w obliczu narastającego zagrożenia niemieckiego, w budynku schroniska pojawiła się drużyna Korpusu Ochrony Pogranicza z zadaniem obserwacji doliny rzeki Kisucy w rejonie Czadcy, gdzie gromadziły się już transporty z oddziałami niemieckiej 7 Bawarskiej Dywizji Piechoty gen. Otta. Długoletni gospodarz schroniska, Bronisław Jarosz, przygotowywał się do opuszczenia obiektu, gdyż z dniem 1 września miał objąć Schronisko PTT „Dworzec Beskidzki” w Zwardoniu[1]. W czasie II wojny światowej przejęło je Beskidenverein i znajdował się w nim posterunek żandarmerii Wehrmachtu, jednak obiekt nie został zamknięty. W 1940 gospodarzem schroniska został ponownie Bronisław Jarosz. Po przejściu frontu wiosną 1945 schronisko, trafione pociskami artyleryjskimi, zostało wyszabrowane. Bronisław Jarosz z karabinem w ręku ścigał szabrowników aż do Oszczadnicy, jednak był w stanie zabezpieczyć tylko to, co sam potrafił udźwignąć[1]. Później, za zgodą Oddziału PTT, furmankami przewiózł ocalałe wyposażenie do rozszabrowanego schroniska na Klimczoku. Na skutek ograniczeń w poruszaniu się w strefie nadgranicznej schronisko zaczęło niszczeć, a Polskie Towarzystwo Tatrzańskie nie miało możliwości zapewnienia mu opieki. W 1964 na Wielką Raczę przybyła komisja Polskiego Towarzystwa Turystyczno-Krajoznawczego, która miała zadecydować o rozbiórce schroniska. Komisja nie była jednomyślna i zdecydowała nie o zamknięciu obiektu, a o jego generalnym remoncie. W latach 60. XX wieku doprowadzono do obiektu prąd, a w 1982 wodę. W latach 90. XX wieku schronisko zostało rozbudowane. Do dotychczasowego drewnianego budynku dobudowano część murowaną. Gospodarzami schroniska (2018) są Daniel i Agnieszka Hudziak.</string>
</resources>